--- a/flutter_firebase_login/pubspec.yaml
+++ b/flutter_firebase_login/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.6
+  fluttertoast: ^8.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
